easy-mock/easymock.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: easymock-node
  labels:
    app: easymock-node
spec:
  containers:
  - name: easymock-node
    image: 10.28.18.13/xuntian/easymock:latest
    ports:
      - containerPort: 7300
