easy-mock/easymock.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: easymock-node
spec: 
  ports:
  - port: 7300
    targetPort: 7300
  selector: 
    app: easymock-node
