easy-mock/mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: easymock-mongo
  labels:
    app: easymock-mongo
spec:
  containers:
  - name: easymock-mongo
    image: mongo:3.7
    ports:
      - containerPort: 27017
    volumeMounts: 
      - name: nfs-easymock-mongo
        mountPath: "/data/db"
  volumes: 
    - name: nfs-easymock-mongo
      nfs: 
        server: 10.28.18.13
        path: "/mnt/easymock_mongo"
---
apiVersion: v1
kind: Service 
metadata: 
  name: easymock-mongo
spec: 
  ports:
  - port: 27017
    targetPort: 27017
  selector: 
    app: easymock-mongo
