easy-mock/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: easymock-redis
  labels:
    app: easymock-redis 
spec:
  containers:
  - name: easymock-redis
    image: redis:4
    ports:
      - containerPort: 6379
---
apiVersion: v1
kind: Service 
metadata: 
  name: easymock-redis
spec: 
  ports:
  - port: 6379
    targetPort: 6379
  selector: 
    app: easymock-redis
