easy-mock/easymock.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: easymock-node
spec: 
  rules: 
  - host: easymock-node.default.svc.cluster.local
    http: 
      paths:
      - path: 
        backend:
          serviceName: easymock-node
          servicePort: 7300
